hetzner/k3s/bc100.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bc100
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bc100
  namespace: bc100
spec:
  selector:
    matchLabels:
      app: bc100
  template:
    metadata:
      labels:
        app: bc100
    spec:
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: volume-mount
          persistentVolumeClaim:
            claimName: volume-claim
      containers:
      - name: app
        image: ghcr.io/flexwie/bc100:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        volumeMounts:
          - mountPath: "/usr/server/app/db"
            name: volume-mount
---
apiVersion: v1
kind: Service
metadata:
  namespace: bc100
  name: bc100
spec:
  selector:
    app: bc100
  ports:
  - port: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: bc100
  name: bc100
spec:
  ingressClassName: traefik
  rules:
  - host: bc100.felixwie.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bc100
            port: 
              number: 3000
